# sisyphus

./: .gitignore  HEAs.ipynb  HowTo.md  README.md  README_CN.md  TODO  abstracts.jsonl  annotation_40.json  articles_processed.rar  basic_example.py  batch_process.py  bulk.ipynb  chain.ipynb  chat_test.ipynb  comparison.txt  compiled_direct_with_element_var_version_2  context_isolated_extraction.ipynb  contextualized.ipynb  contextualized_merged.jsonl  contextualized_v1.ipynb  craw.py  curated_examples.json  data_pce.json  debug  demonstration_workflow.md  divide_conquer.ipynb  doi_list.csv  doi_result.json  draft.md  dspy_inorgan_extract.py  dspy_self_instruction.ipynb  dump_results.py  example_helper.py  from_mac_reading.md  full_20_heas.json  gen_pydantic.py  get_doi_result.py  get_files_num.py  heas_20_distill.json  heas_all_in_one.ipynb  (+67 more)
chempp/: article.py  article_constr.py  developing_notes.md  section_extr.py
config/: html_parse.json  logging.conf  logging.md  throttle_config.json
data/: doi_list.csv
docs/: DEVELOPER_LOG.md  sisyphusv2_primitives.md  update-log.md
for_develop/: dspy_cls_extra.ipynb  inorganic_dspy.db  monkey_patch.ipynb
input/: PVC_input.py  retrieval_dois.txt
notebooks/: bg_extraction.ipynb  context_isolated_extraction.ipynb  contextualized.ipynb  contextualized_v1.ipynb  data_process.ipynb  entity_resolution_test.ipynb  heas_result.json  inorganic.ipynb  labeling.ipynb  openai_connection.ipynb  paragraph_wised.ipynb  post_processing.ipynb  traditional.ipynb
pages/: 1_data_model.py  2_abstract_summarise.py  3_chatGPT alike.py  llm_app.py  utilities.py
relevant_db/: 40_with_good_title.db  dspy_with_element_var_no_abstract_few_shot_no_lm_filter.db
script/: del_local_chroma.py  file_name_doi_conversion.py  get_left_dois.py  normalize_value.py  one_step_parse.py  parse_data.py  process_articles.py  remove_record_namespace.py  result_extract.py
sisyphus/: HOWTO_cn.md
sisyphus/chain/: __init__.py  adapters.py  chain_elements.py  (+8 more)
test_file/: 10.1002&sol;adfm.201801589.html
tests/: check_header.py  index_proto.py  mof_chain_proto.py  test_call_cml_api.py  test_entity_resolution.py  test_make_call_throttlling.py
utils/: log.py
(+87 files in other folders)
