[tool.poetry]
name = "sisyphus"
version = "0.1.0"
description = "Extracting formated information from scientific articles"
authors = ["soike lab <luvsoike@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
tqdm = "^4.66.2"
playwright = "^1.43.0"
langchain = "^0.1.16"
langchain-openai = "^0.1.3"
openai = "^1.17.1"
tiktoken = "^0.6.0"
numpy = "^1.26.4"
scipy = "^1.13.0"
scikit-learn = "^1.4.2"
xlrd = "^2.0.1"
chromadb = "^0.4.24"
bs4 = "^0.0.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
