[tool.poetry]
name = "sisyphus"
version = "0.2.0"
description = "Extracting formated information from scientific articles"
authors = ["soike lab <luvsoike@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
tqdm = "^4.66.2"
playwright = "^1.43.0"
langchain = "^0.3.2"
langchain-openai = "^0.2.2"
openai = "^1.17.1"
tiktoken = "^0.7.0"
numpy = "^1.26.4"
scipy = "^1.13.0"
scikit-learn = "^1.4.2"
xlrd = "^2.0.1"
chromadb = "^0.4.24"
bs4 = "^0.0.2"
faiss-cpu = "^1.8.0"
aiofiles = "^23.2.1"
nltk = "^3.8.1"
aiosqlite = "^0.20.0"
blue = "^0.9.1"
sqlmodel = "^0.0.18"
fastapi = "^0.111.0"
torch = "2.2.1"
transformers = "4.41.0"
seqlbtoolkit = ">=0.0.9,<0.1.0"
html5lib = ">=1.1,<2.0"
seqeval = "1.2.2"
langchain-community = "^0.3.1"
dspy = "^2.5.22"
openpyxl = "^3.1.5"
langchain-chroma = "^0.1.4"
retry = "^0.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
label-studio = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
